--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Погнали:Попутчики</title>
+    <link rel="stylesheet"  href="css/style.css">
   </head>
 
   <body>
   	<header class="page-header page__header">
   	  <a class="page-header__logo">
-  	  	<img src="" width="" height="" alt="">?
+  	  	<img src="img/logo-mobile-blue@1x.png" width="100" height="15" alt="Погнали?">
   	  </a>
   	  <nav class="main-nav">
   		  <button class="main-nav__toggle" type="button">
@@ -54,9 +55,9 @@
 
   	<main class="main">
       <section class="filtration-travelers">
-        <h2 class="filtration-travelers__title">Фильтрация по странам:</h2>
+        <h2 class="visually-hidden">Фильтрация по странам:</h2>
         <form>
-          <h3>Подберите<br>идеального<br>попутчика</h3>
+          <h3  class="filtration-travelers__title">Подберите<br>идеального<br>попутчика</h3>
           <fieldset class="hobby">
             <legend class="hobby__title">хобби</legend>
           </fieldset>
@@ -87,19 +88,19 @@
             <ul class="filtration-transport__list">
               <li class="filtration-transport__item">
                   <input type="checkbox" name="plane" id="plane" checked>
-                  <label for="plane">Авиаперелет</label>
+                  <label class="visually-hidden" for="plane">Авиаперелет</label>
               </li>
               <li class="filtration-transport__item">
                 <input type="checkbox" name="auto" id="auto">
-                <label for="auto">Автотранспорт</label>
+                <label class="visually-hidden" for="auto">Автотранспорт</label>
               </li>
               <li class="filtration-transport__item">
                 <input type="checkbox" name="bike" id="bike">
-                <label for="bike">Велосипед</label>
+                <label class="visually-hidden" for="bike">Велосипед</label>
               </li>
               <li class="filtration-transport__item">
                 <input type="checkbox" name="on-foot" id="on-foot">
-                <label for="on-foot">Пешком</label>
+                <label class="visually-hidden" for="on-foot">Пешком</label>
               </li>
             </ul>
           </fieldset>
@@ -130,7 +131,7 @@
   	  	<ul class="fellow-traveler__list">
   	  	  <li class="fellow-traveler__item">
   	  	  	<h3 class="fellow-traveler__name">Таня <br>Фирсова</h3>
-  	  	  	<img src="" class="fellow-traveler__avatar">
+  	  	  	<img src="img/firsova-mobile@1x.jpg" class="fellow-traveler__avatar">
   	  	  	<input class="fellow-traveler__like" type="checkbox" name="like" id="like" checked>
   	  	  	<label for="like"></label>
   	  	  	<p class="fellow-traveler__tag">#ЗОЖ #ПП #Фитнес #пляж  #авокадо #смузи</p>
@@ -151,36 +152,38 @@
   	  	  	  	</li>
   	  	  	  </ul>
   	  	  	</div>
-  	  	  	<div class="fellow-traveler__transport">
-  	  	  	  <h4 class="fellow-traveler__title">транспорт:</h4>
-  	  	  	  <ul class="transport">
-  	  	  	  	<li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="plane" id="plane" checked disabled>
-  	  	  	  	  	<label for="plane">Авиаперелет</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="auto" id="auto" disabled>
-  	  	  	  	  	<label for="auto">Автотранспорт</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="bike" id="bike" disabled>
-  	  	  	  	  	<label for="bike">Велосипед</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="on-foot" id="on-foot" disabled>
-  	  	  	  	  	<label for="on-foot">Пешком</label>
-  	  	  	  	  </li>
-  	  	  	  </ul>
-  	  	  	</div>
-  	  	  	<div class="fellow-traveler__level">
-  	  	  	  <h4 class="fellow-traveler__title">левел:</h4>
-  	  	  	  <img src="">
-  	  	  	</div>
+            <div class="fellow-traveler__transport-level">
+  	  	  	  <div class="fellow-traveler__transport">
+  	  	  	    <h4 class="fellow-traveler__title">транспорт:</h4>
+  	  	  	    <ul class="transport">
+  	  	  	    	<li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="plane" id="plane" checked disabled>
+  	  	  	    	  	<label class="visually-hidden" for="plane">Авиаперелет</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="auto" id="auto" disabled>
+  	  	  	    	  	<label class="visually-hidden" for="auto">Автотранспорт</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="bike" id="bike" disabled>
+  	  	  	    	  	<label class="visually-hidden" for="bike">Велосипед</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="on-foot" id="on-foot" disabled>
+  	  	  	    	  	<label class="visually-hidden" for="on-foot">Пешком</label>
+  	  	  	    	  </li>
+  	  	  	    </ul>
+  	  	  	  </div>
+  	  	  	  <div class="fellow-traveler__level">
+  	  	  	    <h4 class="fellow-traveler__title">левел:</h4>
+  	  	  	    <img src="">
+  	  	  	  </div>
+            </div>
   	  	  	<a href="#" class="fellow-traveler__button">Позвать!</a>
   	  	  </li>
   	  	  <li class="fellow-traveler__item">
   	  	  	<h3 class="fellow-traveler__name">Петя <br>Демин</h3>
-  	  	  	<img src="" class="fellow-traveler__avatar">
+  	  	  	<img src="img/demin-mobile@1x.jpg" class="fellow-traveler__avatar">
   	  	  	<input class="fellow-traveler__like" type="checkbox" name="like" id="like" >
   	  	  	<label for="like"></label>
   	  	  	<p class="fellow-traveler__tag">#бургер #бар #футбол #концерт #крафт</p>
@@ -197,36 +200,38 @@
   	  	  	  	</li>
   	  	  	  </ul>
   	  	  	</div>
-  	  	  	<div class="fellow-traveler__transport">
-  	  	  	  <h4 class="fellow-traveler__title">транспорт:</h4>
-  	  	  	  <ul class="transport">
-  	  	  	  	<li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="plane" id="plane" checked disabled>
-  	  	  	  	  	<label for="plane">Авиаперелет</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="auto" id="auto" checked disabled>
-  	  	  	  	  	<label for="auto">Автотранспорт</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="bike" id="bike" disabled>
-  	  	  	  	  	<label for="bike">Велосипед</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="on-foot" id="on-foot" checked disabled>
-  	  	  	  	  	<label for="on-foot">Пешком</label>
-  	  	  	  	  </li>
-  	  	  	  </ul>
-  	  	  	</div>
-  	  	  	<div class="fellow-traveler__level">
-  	  	  	  <h4 class="fellow-traveler__title">левел:</h4>
-  	  	  	  <img src="">
-  	  	  	</div>
+            <div class="fellow-traveler__transport-level">
+  	  	  	  <div class="fellow-traveler__transport">
+  	  	  	    <h4 class="fellow-traveler__title">транспорт:</h4>
+  	  	  	    <ul class="transport">
+  	  	  	    	<li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="plane" id="plane" checked disabled>
+  	  	  	    	  	<label class="visually-hidden" for="plane">Авиаперелет</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="auto" id="auto" checked disabled>
+  	  	  	    	  	<label class="visually-hidden" for="auto">Автотранспорт</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="bike" id="bike" disabled>
+  	  	  	    	  	<label class="visually-hidden" for="bike">Велосипед</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="on-foot" id="on-foot" checked disabled>
+  	  	  	    	  	<label class="visually-hidden" for="on-foot">Пешком</label>
+  	  	  	    	  </li>
+  	  	  	    </ul>
+  	  	  	  </div>
+  	  	  	  <div class="fellow-traveler__level">
+  	  	  	    <h4 class="fellow-traveler__title">левел:</h4>
+  	  	  	    <img src="">
+  	  	  	  </div>
+            </div>
   	  	  	<a href="#" class="fellow-traveler__button">Позвать!</a>
   	  	  </li>
   	  	  <li class="fellow-traveler__item">
   	  	  	<h3 class="fellow-traveler__name">Марк <br>Смолов</h3>
-  	  	  	<img src="" class="fellow-traveler__avatar">
+  	  	  	<img src="img/smolov-mobile@1x.jpg" class="fellow-traveler__avatar">
   	  	  	<input class="fellow-traveler__like" type="checkbox" name="like" id="like">
   	  	  	<label for="like"></label>
   	  	  	<p class="fellow-traveler__tag">#рэп #тату #хайпбист #кроссовки #суприм</p>
@@ -247,36 +252,38 @@
   	  	  	  	</li>
   	  	  	  </ul>
   	  	  	</div>
-  	  	  	<div class="fellow-traveler__transport">
-  	  	  	  <h4 class="fellow-traveler__title">транспорт:</h4>
-  	  	  	  <ul class="transport">
-  	  	  	  	<li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="plane" id="plane" checked disabled>
-  	  	  	  	  	<label for="plane">Авиаперелет</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="auto" id="auto" disabled>
-  	  	  	  	  	<label for="auto">Автотранспорт</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="bike" id="bike" checked disabled>
-  	  	  	  	  	<label for="bike">Велосипед</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="on-foot" id="on-foot" disabled>
-  	  	  	  	  	<label for="on-foot">Пешком</label>
-  	  	  	  	  </li>
-  	  	  	  </ul>
-  	  	  	</div>
-  	  	  	<div class="fellow-traveler__level">
-  	  	  	  <h4 class="fellow-traveler__title">левел:</h4>
-  	  	  	  <img src="">
-  	  	  	</div>
+            <div class="fellow-traveler__transport-level">
+  	  	  	  <div class="fellow-traveler__transport">
+  	  	  	    <h4 class="fellow-traveler__title">транспорт:</h4>
+  	  	  	    <ul class="transport">
+  	  	  	    	<li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="plane" id="plane" checked disabled>
+  	  	  	    	  	<label class="visually-hidden" for="plane">Авиаперелет</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="auto" id="auto" disabled>
+  	  	  	    	  	<label class="visually-hidden" for="auto">Автотранспорт</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="bike" id="bike" checked disabled>
+  	  	  	    	  	<label class="visually-hidden" for="bike">Велосипед</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="on-foot" id="on-foot" disabled>
+  	  	  	    	  	<label class="visually-hidden" for="on-foot">Пешком</label>
+  	  	  	    	  </li>
+  	  	  	    </ul>
+  	  	  	  </div>
+  	  	  	  <div class="fellow-traveler__level">
+  	  	  	    <h4 class="fellow-traveler__title">левел:</h4>
+  	  	  	    <img src="">
+  	  	  	  </div>
+            </div>
   	  	  	<a href="#" class="fellow-traveler__button">Позвать!</a>
   	  	  </li>
   	  	  <li class="fellow-traveler__item">
   	  	  	<h3 class="fellow-traveler__name">Лариса <br>Роговая</h3>
-  	  	  	<img src="" class="fellow-traveler__avatar">
+  	  	  	<img src="img/rogovaya-mobile@1x.jpg" class="fellow-traveler__avatar">
   	  	  	<input class="fellow-traveler__like" type="checkbox" name="like" id="like">
   	  	  	<label for="like"></label>
   	  	  	<p class="fellow-traveler__tag">#образование #карьера <br>#учеба #линкедин</p>
@@ -293,31 +300,33 @@
   	  	  	  	</li>
   	  	  	  </ul>
   	  	  	</div>
-  	  	  	<div class="fellow-traveler__transport">
-  	  	  	  <h4 class="fellow-traveler__title">транспорт:</h4>
-  	  	  	  <ul class="transport">
-  	  	  	  	<li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="plane" id="plane" checked disabled>
-  	  	  	  	  	<label for="plane">Авиаперелет</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="auto" id="auto" checked disabled>
-  	  	  	  	  	<label for="auto">Автотранспорт</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="bike" id="bike" disabled>
-  	  	  	  	  	<label for="bike">Велосипед</label>
-  	  	  	  	  </li>
-  	  	  	  	  <li class="transport__item">
-  	  	  	  	  	<input type="checkbox" name="on-foot" id="on-foot" disabled>
-  	  	  	  	  	<label for="on-foot">Пешком</label>
-  	  	  	  	  </li>
-  	  	  	  </ul>
-  	  	  	</div>
-  	  	  	<div class="fellow-traveler__level">
-  	  	  	  <h4 class="fellow-traveler__title">левел:</h4>
-  	  	  	  <img src="">
-  	  	  	</div>
+            <div class="fellow-traveler__transport-level">
+  	  	  	  <div class="fellow-traveler__transport">
+  	  	  	    <h4 class="fellow-traveler__title">транспорт:</h4>
+  	  	  	    <ul class="transport">
+  	  	  	    	<li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="plane" id="plane" checked disabled>
+  	  	  	    	  	<label class="visually-hidden" for="plane">Авиаперелет</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="auto" id="auto" checked disabled>
+  	  	  	    	  	<label class="visually-hidden" for="auto">Автотранспорт</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="bike" id="bike" disabled>
+  	  	  	    	  	<label class="visually-hidden" for="bike">Велосипед</label>
+  	  	  	    	  </li>
+  	  	  	    	  <li class="transport__item">
+  	  	  	    	  	<input type="checkbox" name="on-foot" id="on-foot" disabled>
+  	  	  	    	  	<label class="visually-hidden" for="on-foot">Пешком</label>
+  	  	  	    	  </li>
+  	  	  	    </ul>
+  	  	  	  </div>
+  	  	  	  <div class="fellow-traveler__level">
+  	  	  	    <h4 class="fellow-traveler__title">левел:</h4>
+  	  	  	    <img src="">
+  	  	  	  </div>
+            </div>
   	  	  	<a href="#" class="fellow-traveler__button">Позвать!</a>
   	  	  </li>
   	  	</ul>
@@ -330,7 +339,7 @@
   	</main>
 
   	<footer class="page-footer">
-  	  <img src="" alt="Логотип сервиса">?
+      <img src="img/logo-mobile-blue@1x.png" width="100" height="" alt="Погнали?">
   	  <div class="page-footer__social social">
   	  	<ul class="social__list">
   	  	  <li class="social__item">
@@ -346,7 +355,7 @@
   	  </div>
   	  <div class="page-footer__copyright">
   	  	<p>Разработано</p>
-  	  	<a href="https://up.htmlacademy.ru/adaptive/20"><img src="" width="" height="" alt="Логотип академии"></a>
+  	  	<a href="https://up.htmlacademy.ru/adaptive/20"><img src="img/htmlacademy.svg" width="27" height="33" alt="Логотип академии"></a>
   	  </div>
   	</footer>
   </body>
