--- a/source/index.html
+++ b/source/index.html
@@ -31,7 +31,7 @@
             <li class="user-list__item">
               <a href="login.html" class="user-list__login js-login">Авторизация</a>
             </li>
-            </ul>
+          </ul>
         </div>
       </nav>
       <div class="page-header__contacts contacts">
@@ -54,7 +54,7 @@
     </header>
 
     <main class="page-main">
-      <h1 class="page-main__title">В путешествие с крутыми попутчиками!</h1>
+      <h1 class="page-main__title">В путешествие<br>с крутыми<br>попутчиками!</h1>
       <a class="page-main__tel" href="tel:88005558628"></a>
       <a class="page-main__mail" href="mail:mail@htmlacademy.ru"></a>
       <a href="login.html" class="page-main__login js-login">Авторизация</a>
@@ -87,8 +87,9 @@
       <section class="page-main__about">
         <div class="about">
           <h2 class="about__title">О сервисе</h2>
-          <p class="about__article">Любое путешествие веселее <br>с попутчиками, которые на <br>одной волне с тобой! Делитесь<br>своими идеями путешествий и<br>черпайте вдохновение в чужих.</p>
-          <span class="about__comment">А если найдете кого-то <br>близкого по духу — скорее<br>зовите в совместный трип!</span>
+          <p class="about__article">Любое путешествие веселее с попутчиками, которые на одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих.</p>
+          <span class="about__comment">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</span>
+          <a href="" class="about__link"> Подробнее</a>
         </div>
       </section>
       <section class="page-main__route">
